bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap
---
source: bin/console/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  Would you like to run the following command?

  Reason: need filesystem access

  Permission rule: network; read `/tmp/readme.txt`; write `/tmp/out.txt`

  $ cat /tmp/readme.txt

› 1. Yes, proceed (y)
  2. No, and tell Chaos what to do differently (esc)

  Press enter to confirm or esc to cancel
