bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__approval_overlay__tests__approval_overlay_cross_process_prompt.snap
---
source: bin/xserver/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  Process: Robie [scout]

  $ echo hi

› 1. Yes, proceed (y)
  2. No, and tell Chaos what to do differently (esc)

  Press enter to confirm or esc to cancel or o to open process
